chore: typescript init

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@unipd/logger",
   "version": "1.0.0",
   "description": "Custom JS logger for Unipd",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "types": "logger.d.ts",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Piattaforme-Applicativi/AsitLogger.git"
@@ -16,5 +17,8 @@
   "homepage": "https://github.com/Piattaforme-Applicativi/AsitLogger#readme",
   "dependencies": {
     "pino": "^8.19.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.2"
   }
 }
