chore: Build script on package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "types": "logger.d.ts",
   "type": "module",
+  "scripts": {
+    "build": "tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Piattaforme-Applicativi/AsitLogger.git"
